--- a/html/Introduction_h.html
+++ b/html/Introduction_h.html
@@ -17,7 +17,10 @@
     <link type="text/css" rel="stylesheet" href="../css/footer.css" />
     <link type="text/css" rel="stylesheet" href="../css/Introduction.css" />
 
-    <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
+    <script type="text/javascript" src="../js/vender/jquery.js"></script>
+    <script type="text/javascript" src="../js/common.js"></script>
+
+    <title>香港賽馬會</title>
 </head>
 <body>
 <div class="wrapper">
@@ -86,79 +89,30 @@
     </nav>
     <section class="container" id="main">
     <div class="shadowL"></div>
-    <div id="corporate-container">
-        <div class="mobile-title-en">馬會知多少</div>
-        <div class="row">
-            <div class="col-md-12 col-sm-12">
-                <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
-                    <ul class="nav-level-1">
-                        <li class="nav-left-header">公司簡介</li>
-                        <li><a id="vision-mission-and-values" href="./Introduction.html" target="">目標、使命與核心價值</a></li>
-                        <li><a id="management-structure" href="./Introduction_a.html" target="">行政架構</a>
-                        </li>
-                        <li><a id="racing-and-racecourse-entertainment" href="./Introduction_b.html" target="">賽馬及馬場娛樂</a>
-                        </li>
-                        <li><a id="membership-club" href="./Introduction_c.html" target="">會員會所</a></li>
-                        <li><a id="responsible-sports-wagering-and-mark-six-lottery" href="./Introduction_d.html" target="">有節制體育博彩及六合彩獎券</a>
-                        </li>
-                        <li><a id="corp-charities" href="./Introduction_e.html" target="">慈善事務</a></li>
-                        <li><a id="hkjc-sports-and-community-development" href="./Introduction_f.html" target="">馬會體育及社區發展</a></li>
-                        <li><a id="awards-and-achievements" href="./Introduction_g.html" target="">獎項及榮譽</a></li>
-                        <li><a id="open-result" href="./Introduction_h.html" target="" class="active">模擬賽馬開獎結果</a></li>
-                    </ul>
-                </div>
-                <!--CONTENT-->
-                <div class="col-md-10 col-sm-9">
-                    <div class="corporate-header">
-                        <h4>目標、使命與核心價值
+    <div id="corporate-container" class="clearfix">
+        <div class="left">
+            <div class="searchArea"></div>
+            <div class="openData">
+                <table>
+                    <thead>
+                      <tr>
+                          <th>賽程</th>
+                          <th>馬賽結果</th>
+                      </tr>
+                    </thead>
+                    <tbody>
 
-                            <div id="fontSizeContainer">
-                                <div><span>字型</span> <a class="small" href="javascript:changeFontSizeRe(0);"></a><a class="medium active" href="javascript:changeFontSizeRe(1);"></a><a class="large" href="javascript:changeFontSizeRe(2);"></a></div>
-                            </div>
-                            <div class="clear"></div>
-
-                        </h4>
-                        <div class="dashLine"></div>
-                    </div>
-
-                    <div class="corporate-content-container">
-                        <div class="row">
-                            <div class="col-md-12">
-                                <h5>目標</h5>
-                                <p class="paddingBottom-20px">致力提供世界最高水平的賽馬、體育及博彩娛樂，同時維持全港最大慈善公益資助機構的地位。</p>
-                                <h5>使命</h5>
-                                <p class="paddingBottom-20px">竭誠令顧客百分百滿意，對於賽馬觀眾、投注人士、獎券投注者、本會會員、慈善機構、公益團體、香港政府，以至全港市民，都不能有負所望，務必置身全港最備受推崇機構之列。</p>
-
-
-                                <h5>核心價值</h5>
-                                <p><strong>卓越領導</strong><br>
-                                    馬會是致力建設更美好社會的世界級機構，而不斷推動馬會同仁努力再創高峰的，正是賽馬的競賽精神，我們核心價值所在。 </p>
-                                <p><strong>堅守誠信</strong><br>
-                                    馬會在社會擔崗獨特的角色，必須恪守高度誠信，秉持專業操守，處事以理為據，藉此維持香港市民對我們的信任和信心。 </p>
-                                <p><strong>服務社群 </strong><br>
-                                    馬會上下一心，每位同事都有份創造經濟及社會價值，為香港締造更美好未來。我們一直以回饋社會為己任，定當繼續在多方面為市民謀福祉。</p>
-                                <p><strong>持續進步</strong><br>
-                                    世界瞬息萬變，不容我們固步自封，馬會定當自強不息，精益求精，從而不斷為社會締造更美好未來。我們視持續進步為一個悠長旅程，而旅程不設終站。</p><p class="paddingBottom-20px">
-                            </p></div>
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-10 col-md-offset-1 col-sm-10 col-sm-offset-1">
-                                <div class="videoBox">
-                                    <img style="cursor:pointer" src="../images/videotbn-vision-and-mission.jpg" alt="" class="videoCover" id="videotbn2" data-link="/special/2015/2015-jc130/cht20151223/special_2015-jc130_cht20151223">
-                                    <iframe style="display: none; margin-top: 0px; height: 420px;" class="videoIframe" src="" scrolling="no" frameborder="0" width="100%" id="viFrame2"></iframe>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <!--CONTENT-->
+                    </tbody>
+                </table>
             </div>
+        </div>
+        <div class="right online_video">
+            <video src="" controls poster="" id="online_video" width="500" height="500"></video>
         </div>
     </div>
     <div class="shadowR"></div>
     <div class="clear"></div>
-</section>
+    </section>
     <footer class="container">
         <div id="rgp-container">
             <div>
@@ -195,4 +149,11 @@
     </footer>
 </div>
 </body>
+<script>
+   $(function(){
+       $.ajax({
+           
+       })
+   });
+</script>
 </html>
