--- a/html/duty.html
+++ b/html/duty.html
@@ -16,7 +16,6 @@
     <link type="text/css" rel="stylesheet" href="../css/footer.css" />
     <link type="text/css" rel="stylesheet" href="../css/Introduction.css" />
     <link type="text/css" rel="stylesheet" href="../css/member.css" />
-    <link type="text/css" rel="stylesheet" href="../css/contribution.css" />
 
     <script type="text/javascript" src="../js/vender/jquery.js"></script> <script type="text/javascript" src="../js/common.js"></script><title>香港賽馬會</title>
 </head>
@@ -52,9 +51,9 @@
                     <li class="subMenuItem"><a href="./member_b.html" class="nav-arrow" >會員優惠</a></li>
                     <li class="subMenuItem"><a href="./member_c.html" class="nav-arrow" >Young Menbers</a></li>
                     <li class="subMenuItem"><a href="./member_d.html" class="nav-arrow" >會員迎新</a></li>
-                    <li class="subMenuItem"><a href="./member_e.html" class="nav-arrow" >遵守事項</a></li>
+                    <!--<li class="subMenuItem"><a href="./member_e.html" class="nav-arrow" >遵守事項</a></li>
                     <li class="subMenuItem"><a href="./member_f.html" class="nav-arrow" >駕駛及泊車指南</a></li>
-                    <li class="subMenuItem"><a href="./member_g.html" class="nav-arrow" >設施指南</a></li>
+                    <li class="subMenuItem"><a href="./member_g.html" class="nav-arrow" >設施指南</a></li>-->
                     <li class="subMenuItem"><a href="./member_h.html" class="nav-arrow" >會籍狀態及表格章程</a></li>
                     <li class="subMenuItem"><a href="./member_i.html" class="nav-arrow" >常見問題</a></li>
                     <li class="subMenuItem"><a href="./member_j.html" class="nav-arrow" >電話指南</a></li>
@@ -87,67 +86,41 @@
     </nav>
     <section class="container" id="main">
         <div class="shadowL"></div>
-        <div id="charities-container" style="max-width: 1883px;">
-            <div class="mobile-title-zh">社區貢獻及慈善</div>
+        <div id="home-container">
+            <div class="mobile-title-en">About HKJC</div>
             <div class="row">
                 <div class="col-md-12 col-sm-12">
-                    <div id="nav-left" class="col-md-2 col-sm-3 col-xs-12">
-                        <ul class="nav-level-1" style="display: block;">
-                            <li class="nav-left-header">十大社區貢獻範疇</li>
-                            <li><a id="youth-development" href="./contribution.html" target="" class="active">青年發展</a></li>
-                            <li><a id="elderly-services" href="./contribution_a.html" target="">長者服務</a></li>
-                            <li><a id="sports-and-recreation" href="./contribution_b.html" target="">體育康樂</a></li>
-                            <li><a id="arts-culture-and-heritage" href="./contribution_c.html" target="">藝術文化</a></li>
-                            <li><a id="education-and-training" href="./contribution_d.html" target="">教育培訓</a></li>
-                            <li><a id="medical-health" href="./contribution_e.html" target="">醫療衞生</a></li>
-                            <li><a id="rehabilitation-services" href="./contribution_f.html" target="">家庭服務</a></li>
-                            <li><a id="health-services" href="./contribution_g.html" target="">康復服務</a></li>
-                            <li><a id="environmental-protection" href="./contribution_h.html" target="">環境保護</a></li>
-                            <li><a id="emergency-and-poverty-relief" href="./contribution_i.html" target="">扶貧救急</a></li>
-                        </ul>
-                    </div>
+
                     <!--CONTENT-->
-                    <div class="col-md-10 col-sm-9" style="background-color: #fff; ">
+                    <div class="col-md-12 col-sm-12" style="background-color: #fff; ">
 
-                        <div class="row">
-                            <div class="col-md-12">
-                                <h4>青年發展
-
-                                    <div id="fontSizeContainer">
-                                        <div><span>字型</span> <a class="small" href="javascript:changeFontSizeRe(0);"></a><a class="medium active" href="javascript:changeFontSizeRe(1);"></a><a class="large" href="javascript:changeFontSizeRe(2);"></a></div>
-                                    </div>
-                                    <div class="clear"></div>
-
-                                </h4>
-                                <div class="dashLine"></div>
-                            </div>
+                        <div class="home-header">
+                            <h4>免責聲明
+                                <div id="fontSizeContainer">
+                                    <div><span>字型</span> <a class="small" href="javascript:changeFontSizeRe(0);"></a><a class="medium active" href="javascript:changeFontSizeRe(1);"></a><a class="large" href="javascript:changeFontSizeRe(2);"></a></div>
+                                </div>
+                                <div class="clear"></div>
+                            </h4>
+                            <div class="dashLine"></div>
                         </div>
 
-                        <div class="charities-content-container">
-                            <div class="row">
-                                <div class="col-md-10 col-sm-9">
-                                    <p>青年人是社會未來的棟樑。多年來，馬會資助各類型青少年活動，亦主動開拓不同項目，向青年人灌輸正確的價值觀及處世態度。 其中，具前瞻性的「共創成長路」- 賽馬會青少年培育計劃，不僅獲納入本地課程，更經多個海外教育機構採用，贏得國際認可。由民政事務局舉辦、馬會資助的「青少年暑期活動」 (現改稱為「「青少年暑期活動」」)，自1969年推出以來，已陪伴數百萬名兒童及青少年度過充實而富意義的暑假。</p>
-                                    <p>馬會深信，培養新一代的創造力和可持續發展，是香港長遠發展的關鍵，馬會慈善信託基金致力促進青少年的身心發展，提供肥沃的發展土壤，激發其潛能，孕育他們積極參與社會事務的能力與熱誠。賽馬會「創不同」學院及「賽馬會鼓掌‧創你程計劃」等項目，以嶄新方式鼓勵青年人跳出框框，善用創新思維。其中，「賽馬會鼓掌‧創你程計劃」是全港首個結合跨界別力量，全面協助在學及非在學青少規劃前路的項目，旨在營造有利環境，提供多元出路，讓青少年探索及認清自己的興趣及抱負，踏出康莊大道。</p>
-                                </div>
-                                <div class="col-md-2 col-sm-3">
-                                    <div class="row">
-                                        <div class="col-md-offset-2 col-md-8 col-sm-8 col-sm-offset-2 col-xs-offset-8 col-xs-4" style="padding-bottom: 20px">
-                                            <img src="../images/10_icon_7.gif">
-                                        </div>
-                                    </div>
-
-                                </div>
-                                <div class="clearfix"></div>
-                            </div>
-                            <div class="row" id="photo-area">
-                                <div class="col-md-4 col-sm-4 col-xs-12">
-                                    <img src="../images/youth-development-1.jpg" alt="">
-                                </div>
-                                <div class="col-md-4 col-sm-4 col-xs-12">
-                                    <img src="../images/youth-development-2.jpg" alt="">
-                                </div>
-                                <div class="col-md-4 col-sm-4">
-                                    <img src="../images/youth-development-3.jpg" alt="">
+                        <div class="home-content-container">
+                            <div class="corp-container row">
+                                <div class="col-md-12">
+                                    <ol>
+                                        <li>在任何二層域名稱為 hkjc 的網站（統稱「<strong>網站</strong>」）上的任何數據、文章、至第三方網頁之連結和其他資料（統稱「<strong>資料</strong>」）皆以「現況」形式提供，並只作提供資訊之用。 </li>
+                                        <li>閣下使用<em>網站</em>，即視為知悉和同意﹕
+                                            <ul style="margin-left:15px; margin-top:15px">
+                                                <li style="list-style-type:lower-alpha">香港賽馬會、其關聯公司或任何參與彙編資料或與彙編資料有關的第三方（統稱「<strong>馬會各方</strong>」）皆無就資料是否準確、適時或完整或使用資料所得之結果作任何明示或隱含的保證或聲明﹔ </li>
+                                                <li style="list-style-type:lower-alpha">馬會各方清楚明示不對於資料作出任何隱含保證（包括但不限於資料是否具備可商售品質和是否適合特定用途的隱含保證）﹔ </li>
+                                                <li style="list-style-type:lower-alpha">任何情況下，馬會各方皆不會對任何人或法律實體因任何資料而作出或沒有作出的任何行為負上任何法律責任﹔ </li>
+                                                <li style="list-style-type:lower-alpha">網站內對任何第三方公司、服務、產品或網頁的連結或提述（統稱「<strong>第三方服務</strong>」）並不等於或默示馬會各方對第三方服務的推薦。儘管馬會各方已在發佈時使用合理的努力檢查第三方服務，但馬會各方皆不會就第三方服務內的資料是否準確、適時或完整或使用第三方服務內的資料所得之結果作任何明示或隱含的保證或聲明﹔和 </li>
+                                                <li style="list-style-type:lower-alpha">任何情況下，馬會各方皆不會就因使用任何第三方服務或與使用任何第三方服務有關而對任何人或法律實體負上任何法律責任。 </li>
+                                            </ul>
+                                        </li>
+                                        <li>若閣下對網站上任何內容有懷疑、欲對內容提問或提意見、發現內容有誤或遺漏或認為可用更為清楚的方式顯示該等內容，歡迎把閣下的意見和/或提議發送至<a href="mailto:customer.care@hkjc.com">customer.care@hkjc.com</a>。 </li>
+                                        <li>關於使用「網站」任何一部份的條款和細則和免責聲明皆有中英文兩個版本，如有歧異，概以英文版本為準。 </li>
+                                    </ol>
                                 </div>
                             </div>
 
@@ -187,6 +160,9 @@
                     <div class="col-md-8 col-xs-12 col-sm-12 txt-left">
                         <a class="first" href="./member_i.html" >常見問題</a>|
                         <a href="javascript:void(0);">聯絡我們</a>|
+                        <a href="javascript:void(0);">傳媒專用區</a>|
+                        <a href="http://www.hkjc.com/home/chinese/sitemap.aspx">網頁指南</a> |
+                        <a href="javascript:void(0);">規例</a>|
                         <a href="./Introduction_d.html" >提倡有節制博彩</a>|
                         <a href="./privacy.html">私隱條款</a> |
                         <a href="./duty.html">免責聲明</a>
