--- a/html/member_j.html
+++ b/html/member_j.html
@@ -501,7 +501,7 @@
             <div>
                 <div class="row no-gutter">
                     <div class="col-md-10 col-sm-10 col-xs-12 marginTop-20px">
-                        <a class="rgp-text" href="http://www.hkjc.com/responsible-gambling/ch/index.aspx" > <b>博彩要有節制</b></a>
+                        <a class="rgp-text" href="./Introduction_d.html" > <b>博彩要有節制</b></a>
                         <ul class="hidden-xs">
                             <li>未滿十八歲人士不得投注或進入可投注的地方。</li>
                             <li>向非法或海外莊家下注，最高可被判監九個月及罰款三萬元。</li>
@@ -512,7 +512,7 @@
                         </ul>
                     </div>
                     <div class="col-md-2 col-sm-2 hidden-xs txt-right marginTop-15px">
-                        <a class="rgp-text" href="http://www.hkjc.com/responsible-gambling/ch/index.aspx" ><img src="../images/rgp_text_chi_970.gif" style="width: auto"></a>
+                        <a class="rgp-text" href="./Introduction_d.html" ><img src="../images/rgp_text_chi_970.gif" style="width: auto"></a>
                     </div>
                 </div>
             </div>
@@ -521,7 +521,11 @@
             <div>
                 <div class="row no-gutter">
                     <div class="col-md-8 col-xs-12 col-sm-12 txt-left">
-                        <a class="first" href="http://common.hkjc.com/utility/faq/chinese/general/usage.aspx" >常見問題</a>                            | <a href="javascript:NewWindow('http://special.hkjc.com/infomenu/ch/contact/feedback.asp','mypopup','770','550','yes','yes');">聯絡我們</a>                            | <a href="javascript:NewWindow('http://mcs.hkjc.com/','mypopup','770','550','yes','yes');">傳媒專用區</a>                            | <a href="http://www.hkjc.com/home/chinese/sitemap.aspx">網頁指南</a> | <a href="javascript:NewWindow('http://www.hkjc.com/chinese/betting/betting_rule.htm','mypopup','770','550','yes','yes');">規例</a>                            | <a href="http://www.hkjc.com/responsible-gambling/ch/index.aspx" >提倡有節制博彩</a>                            | <a href="http://www.hkjc.com/home/chinese/corporate/corp_privacy.aspx">私隱條款</a> | <a href="http://www.hkjc.com/home/chinese/corporate/corp_disclaimer.aspx">免責聲明</a>
+                        <a class="first" href="./member_i.html" >常見問題</a>|
+                        <a href="javascript:void(0);">聯絡我們</a>|
+                        <a href="./Introduction_d.html" >提倡有節制博彩</a>|
+                        <a href="./privacy.html">私隱條款</a> |
+                        <a href="./duty.html">免責聲明</a>
                     </div>
                     <div class="col-md-4 col-xs-12 col-sm-12 txt-right">
                         版權所有 不得轉載 © 2000-2017 香港賽馬會
