开奖页面样式

--- a/html/Introduction_h.html
+++ b/html/Introduction_h.html
@@ -92,13 +92,13 @@
         <section class="container" id="main">
             <div class="shadowL"></div>
             <div id="corporate-container" class="clearfix" style="padding:25px;">
-                <div class="left">
+                <div class="left tableArea">
                     <div class="searchArea">
-                        <span>日期：</span>
+                        <span class="dateLabel">賽事日期：</span>
                         <input type="text" id="dateStart">
                         <span>-</span>
                         <input type="text" id="dateEnd">
-                        <span class="searchButton">查询</span>
+                        <span class="searchButton">瀏覽</span>
                     </div>
                     <div class="openData">
                         <table>
@@ -220,11 +220,86 @@
                                         <i> 10 </i>
                                     </td>
                                 </tr>
+                                <tr>
+                                    <td>20170613018</td>
+                                    <td><i> 1 </i>
+                                        <i> 2 </i>
+                                        <i> 3 </i>
+                                        <i> 4 </i>
+                                        <i> 5 </i>
+                                        <i> 6 </i>
+                                        <i> 7 </i>
+                                        <i> 8 </i>
+                                        <i> 9 </i>
+                                        <i> 10 </i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>20170613018</td>
+                                    <td><i> 1 </i>
+                                        <i> 2 </i>
+                                        <i> 3 </i>
+                                        <i> 4 </i>
+                                        <i> 5 </i>
+                                        <i> 6 </i>
+                                        <i> 7 </i>
+                                        <i> 8 </i>
+                                        <i> 9 </i>
+                                        <i> 10 </i>
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td>20170613018</td>
+                                    <td><i> 1 </i>
+                                        <i> 2 </i>
+                                        <i> 3 </i>
+                                        <i> 4 </i>
+                                        <i> 5 </i>
+                                        <i> 6 </i>
+                                        <i> 7 </i>
+                                        <i> 8 </i>
+                                        <i> 9 </i>
+                                        <i> 10 </i>
+                                    </td>
+                                </tr>
                             </tbody>
                         </table>
+                        <div class="page">
+                            <span class="num">上一頁</span>
+                            <span class="num"><</span>
+                            <span class="num on"> 1 </span>
+                            <span class="num"> 2 </span>
+                            <span class="num"> 3 </span>
+                            <span class="num"> 4 </span>
+                            <span class="num"> 5 </span>
+                            <span class="num"> 6 </span>
+                            <span class="num"> 7 </span>
+                            <span class="num"> 8 </span>
+                            <span class="num"> 9 </span>
+                            <span class="num"> 10 </span>
+                            <span class="num">></span>
+                            <span class="num">下一頁</span>
+                        </div>
                     </div>
                 </div>
                 <div class="right online_video">
+                    <div class="videoWrapper">
+                        <div class="clearfix">
+                            <span class="videoTitle left">模擬賽馬開獎視頻 3分鐘一期</span>
+                            <span class="videoTime right"><i></i>02<i class="m0_2">:</i>59<i class="m0_2">:</i>59</span>
+                        </div>
+                        <div class="videoContent"></div>
+                        <div class="videoIssue">
+                            當前場次：20170613-018
+                        </div>
+                        <div class="videoTip">
+                            無需下載程式，在線觀看賽馬開獎
+                        </div>
+                    </div>
+                    <div class="remark">
+                        <p style="margin-top:10px;">備註：</p>
+                        <p>《模擬賽馬》是由麻灰與私人賽事分析團隊合作推出的產品，3分鐘一次，24小時開獎，僅供馬會成員賭馬消遣娛樂。賽馬開獎結果，採用純隨機數控制，公平公正公開。每次瀏覽最多只允許瀏覽1天時間段的開獎結果。</p>
+                    </div>
                     <video src="" controls poster="" id="online_video" width="500" height="320"></video>
                 </div>
             </div>
