--- a/index.html
+++ b/index.html
@@ -91,10 +91,10 @@
         <div class="swiper-container">
             <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                    <img src="./images/slideImg_one.jpg" alt="点击进入模拟赛马" onclick="javascipt:window.location.href = './html/Introduction_h.html'" style="cursor: pointer;">
+                    <img src="./images/slideImg_one.jpg" alt="点击进入模拟赛马" onclick="javascipt:(window.location.href = './html/Introduction_h.html')" style="cursor: pointer;">
                 </div>
                 <div class="swiper-slide">
-                    <img src="./images/slideImg_one.jpg" alt="点击进入模拟赛马" onclick="javascipt:window.location.href = './html/Introduction_h.html'" style="cursor: pointer;">
+                    <img src="./images/slideImg_one.jpg" alt="点击进入模拟赛马" onclick="javascipt:(window.location.href = './html/Introduction_h.html')" style="cursor: pointer;">
                 </div>
             </div>
             <!-- 分页器 -->
@@ -143,7 +143,7 @@
                                 </table>
                             </div>
                             <div class="mobileSpotlightBox">
-                                <div class="mobileSpotlightBg bannerPromoBg" style="background-image: url(&quot;http://special.hkjc.com/banners/ch/215x224/215-224-hv-Carnivale201706_215x224_c-mobile.jpg?l=EHSE2010&amp;c=hw&quot;);"><a href="Javascript:;"><img src="./images/spotlight-iframe-bg-32-18.jpg"></a></div>
+                                <div class="mobileSpotlightBg bannerPromoBg"><a href="Javascript:;"><img src="./images/spotlight-iframe-bg-32-18.jpg"></a></div>
                             </div>
                             <div class="clearfix"></div>
                         </div>
